# project2finetune5

./: .gitignore  README.md  export_onnx.py  generate.py  pyproject.toml  requirements.txt  train.py  train_refiner.py
configs/: baseline_256.yaml  finetune_256.yaml  phase1_residual512.yaml  phase2_residual1024.yaml  refiner_1024.yaml  refiner_512.yaml
src/: augment.py  dataset.py  losses.py  model.py  refiner.py
