[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project2"
version = "0.1.0"
description = "FFHQ 1024x1024 face generation via cascade SR-Refiner GAN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "onnx>=1.15",
    "onnxruntime>=1.16",
]
